--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile project(':library')
+//    compile('com.nd.android.sdp.common:downloadmanager:0.1.0') {
+//        exclude group: 'com.android.support'
+//    }
 }
 
 tasks.withType(JavaCompile) { options.encoding = "UTF-8" }
