--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     repositories {
+        maven { url 'http://nexus.sdp.nd/nexus/content/groups/android-public/' }
         jcenter()
         maven {
             url 'https://repos.zeroturnaround.com/nexus/content/repositories/zt-public-releases'
